tests/neg/extensions-can-only-have-using.scala
extension(x: Any)() // error
  def f = 42
val x = Nil.f
